# simonhyll

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CNAME  Cargo.toml  README.md  action.yml  cobertura.xml  deny.toml  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  rust-toolchain.toml  tarpaulin-report.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: changeset.yml  deploy-create-simon.yml  deploy-docs.yml  pages.yaml  pages.yml  pre-commit.yml  snake.yml  test-rust-coverage.yml  tests.yml
actions/dashboard/: action.yml
actions/index-now/: action.yml  index.cjs
actions/rust-coverage/: action.yml  index.cjs
charts/wireguard/: Chart.yaml  README.md  values.yaml
charts/wireguard/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
crates/calviz/: Cargo.toml  tauri.conf.json
crates/calviz/src/: main.rs
crates/simonhyll-cli/: Cargo.toml
docs/: astro.config.mjs  lunaria.config.json  package.json  tsconfig.json
docs/public/: CNAME  ads.txt  navigate.js  rss.xsl  sitemap.xsl  yandex_2ec13251bceba928.html
docs/src/: content.config.ts
docs/src-tauri/: Cargo.toml  tauri.conf.json
docs/src/components/: Analytics.astro  HeroBackground.astro  SimonSays.astro  SimonSaysVue.vue
docs/src/components/overrides/: MarkdownContent.astro  Sidebar.astro  (+1 more)
docs/src/content/: config.ts
docs/src/fragments/: create-simon.mdx
docs/src/lib/: index.ts
docs/src/styles/: create-simon.scss  heading-links.scss  main.scss  overrides.scss  task-list.scss  theme.scss
features/: hello.feature
isolation/: index.js
src/: app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/scss/: fonts.scss  main.scss
src/components/: MyMenubar.vue  MyNavbar.vue  MySystembar.vue
src/lang/: sv-SE.yaml
src/layouts/: default.vue
src/pages/: blog.vue  index.vue
src/pages/blog/: index.vue
src/pages/cv/: index.vue
src/pages/portfolio/: index.vue
src/plugins/: vuetify.ts
(+98 files in other folders)
