[workspace]
members = ["crates/simonhyll-cli", "docs/src-tauri", "packages/create-simon"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.dependencies]
