[tool.poetry]
name = "simonhyll"
version = "0.1.0"
description = "Make something amazing!"
authors = ["Simon Hyll <hyllsimon@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
